--- a/scss/main.scss
+++ b/scss/main.scss
@@ -72,7 +72,7 @@ header {
 		ul {
 			display: none;
 			position: absolute;
-			left: 12%;
+			left: 45%;
 			width: 130px;
 			text-align: center;
 			font-size: 1.2rem;
@@ -82,12 +82,13 @@ header {
 				rgb(8, 8, 8) 59%,
 				rgb(56, 56, 56) 100%
 			);
-			border-radius: 0px 0px 10px 10px;
+			border-radius: 0px 10px 10px 10px;
 			z-index: 999;
+			overflow: hidden;
 		}
 		.navbar__item-dropdown {
 			width: 100%;
-			border-bottom: 1px solid rgba(255, 127, 80, 0.2);
+			border-bottom: 1px solid rgba(255, 166, 0, 0.301);
 		}
 	}
 }
@@ -105,6 +106,12 @@ header {
 }
 
 @media (max-width: 992px) {
+	.navbar__item-dropdown-link {
+		ul {
+			margin-top: -30px;
+		}
+	}
+
 	header {
 		padding: 2em;
 
@@ -114,7 +121,7 @@ header {
 			left: 0;
 			right: 0;
 			background: rgba($color: #000000, $alpha: 0.9);
-			border-top: 1px solid rgba($color: coral, $alpha: 0.1);
+			border-top: 1px solid rgba($color: rgb(156, 156, 156), $alpha: 0.1);
 			display: none;
 			transition: 0.3s;
 
@@ -126,7 +133,7 @@ header {
 						position: relative;
 						width: 100%;
 						li {
-							background: rgba($color: rgb(0, 0, 0), $alpha: 0.2);
+							background: rgba($color: rgb(214, 214, 214), $alpha: 0.1);
 							ul {
 								width: 100%;
 								left: 10%;
